// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleOrderUpdate terminate a non existing liveOrder 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`updateOrderBook add 1`] = `
Object {
  "change": 456,
  "count": 1,
  "price": 123,
  "side": "bid",
}
`;

exports[`updateOrderBook add 2`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
    },
    Object {
      "balance": 456,
      "initialSequence": 111,
      "orderHash": "orderHash",
      "price": 123,
    },
    true,
    false,
  ],
]
`;

exports[`updateOrderBook add 3`] = `
Object {
  "orderHash": Object {
    "balance": 456,
    "initialSequence": 111,
    "orderHash": "orderHash",
    "price": 123,
    "side": "bid",
  },
}
`;

exports[`updateOrderBook terminate 1`] = `
Object {
  "change": -400,
  "count": 1,
  "price": 123,
  "side": "bid",
}
`;

exports[`updateOrderBook terminate 2`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
    },
    Object {
      "balance": 400,
      "initialSequence": 111,
      "orderHash": "orderHash",
      "price": 123,
    },
    true,
    true,
  ],
]
`;

exports[`updateOrderBook update 1`] = `
Object {
  "change": -56,
  "count": 0,
  "price": 123,
  "side": "bid",
}
`;

exports[`updateOrderBook update 2`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
    },
    Object {
      "balance": 400,
      "initialSequence": 111,
      "orderHash": "orderHash",
      "price": 123,
    },
    true,
    false,
  ],
]
`;

exports[`updateOrderBook update 3`] = `
Object {
  "orderHash": Object {
    "balance": 400,
    "initialSequence": 111,
    "orderHash": "orderHash",
    "price": 123,
    "side": "bid",
  },
}
`;

exports[`updateOrderBookSnapshot 1`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 0,
    },
    Object {
      "pair": "code1|code2",
      "prevVersion": 0,
      "updates": Array [
        Object {
          "change": 1,
          "count": 0,
          "price": 1,
          "side": "bid",
        },
        Object {
          "change": 2,
          "count": 1,
          "price": 2,
          "side": "bid",
        },
      ],
      "version": 1234567890,
    },
  ],
]
`;

exports[`updateOrderBookSnapshot 2`] = `
Array [
  Array [
    "code1|code2",
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 0,
    },
    Object {
      "pair": "code1|code2",
      "prevVersion": 0,
      "updates": Array [
        Object {
          "change": 1,
          "count": 0,
          "price": 1,
          "side": "bid",
        },
        Object {
          "change": 2,
          "count": 1,
          "price": 2,
          "side": "bid",
        },
      ],
      "version": 1234567890,
    },
  ],
]
`;
